--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.14.0",
     "express-basic-auth": "^1.2.1",
     "mongoose": "^8.0.1",
+    "omise": "^0.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
